--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ Application Setup:
 * System dependencies
 
 * Configuration
-    Sign in with Facebook cannot be used locally
+  Currently None
 
 * Database creation
   Create ROLE workoutwars in PostgreSQL by
@@ -29,8 +29,9 @@ Application Setup:
     rake db:test:prepare
     bundle exec rspec spec/
     cucumber features/
+
 * API
-  The session API can be found at /api/v1/sign_in etc..
+  The session API can be found at /api/v1/sign_in
   To test with curl 
     curl -X POST http://localhost:3000/api/v1/users/sign_in.json --data "email=email@example&password=password"
     curl GET -X DELETE http://localhost:3000/api/v1/users/sign_out.json --data "auth_token=GfRXCyV6BG8iiDUAuNzk"
@@ -40,11 +41,16 @@ Application Setup:
 * Services (job queues, cache servers, search engines, etc.)
 
 * Deployment instructions
-  Add heroku remote to git
-    git remote add heroku git@heroku.com:workoutwars.git 
-  before pushing run
-    rake assets:precompile
-  commit changes to github then run 
-    git push heroku
+  Add heroku production remote to git
+    git remote add production git@heroku.com:workoutwars.git
+  Add heroku review remote to git
+    git remote add review git@heroku.com:workoutwars-review.git
+
+  To Deploy to review
+    ./deploy.rb review
+
+  To Deploy to production
+    ./deploy.rb production
+
 
 <tt>rake doc:app</tt>.
